--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@1,75..100,100..900&display=swap" rel="stylesheet">
     <script src="scripts/main.js" defer></script>
-    <title>Document</title>
+    <title>EBAC Tech Talks</title>
 </head>
 <body>
-    <h1>Teste</h1>
-    <img src="./images/backend.png" alt="">
+   <header class="hero">
+        <div class="container">
+            <img src="./images/ebac_logo.svg" alt="EBAC">
+            <p>
+                O maior evento de tecnologia do Brasil começa em 10d 12h 13m 45s
+            </p>
+        </div>
+   </header>
 </body>
 </html>
