--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,25 @@
             <p class="hero__text">
                 O maior evento de tecnologia do Brasil começa em 10d 12h 13m 45s
             </p>
+            <div class="infos-bar">
+                <ul class="infos-bar__list">
+                    <li class="infos-bar__list__item">
+                        <b>Localização</b>
+                        Allianz Parque - Barra fundo - São Paulo
+                    </li>
+                    <li class="infos-bar__list__item">
+                        <b>Preço</b>
+                        A partir de R$ 500,0
+                    </li>
+                    <li class="infos-bar__list__item">
+                        <b>Quando</b>
+                        12/12/2022 às 19hrs
+                    </li>
+                </ul>
+                <a href="" class="button button--primary">
+                    Garanta sua vaga
+                </a>
+            </div>
         </div>
    </header>
 </body>
