feat: implement event section with responsive layout

--- a/src/index.html
+++ b/src/index.html
@@ -38,5 +38,15 @@
             </div>
         </div>
    </header>
+
+   <section class="event">
+        <div class="container">
+            <div class="event__detail">
+                <h2 class="event__detail__title">Front-End</h2>
+                <p class="event__detail__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquam quos optio. Adipisci minima officiis repellendus illo, nostrum enim natus sequi dignissimos alias quia dolorum maiores? Quam laborum dolor iusto?</p>          
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        </div>
+   </section>
 </body>
 </html>
