--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@1,75..100,100..900&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <script src="scripts/main.js" defer></script>
     <title>EBAC Tech Talks</title>
 </head>
@@ -38,15 +40,42 @@
             </div>
         </div>
    </header>
-
-   <section class="event">
-        <div class="container">
-            <div class="event__detail">
+   <section class="event event--front-end">
+        <div class="container" data-aos="fade-right">
+            <div class="event event__detail">
                 <h2 class="event__detail__title">Front-End</h2>
                 <p class="event__detail__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquam quos optio. Adipisci minima officiis repellendus illo, nostrum enim natus sequi dignissimos alias quia dolorum maiores? Quam laborum dolor iusto?</p>          
             </div>
             <img class="event__image" src="./images/frontend.png" alt="Front-End">
         </div>
    </section>
+   <section class="event event--ux-ui event--image-left">
+    <div class="container" data-aos="fade-left">
+        <div class="event event__detail">
+            <h2 class="event__detail__title">Front-End</h2>
+            <p class="event__detail__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquam quos optio. Adipisci minima officiis repellendus illo, nostrum enim natus sequi dignissimos alias quia dolorum maiores? Quam laborum dolor iusto?</p>          
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+    </div>
+</section>
+<section class="event event--data-science">
+    <div class="container" data-aos="fade-right">
+        <div class="event event__detail">
+            <h2 class="event__detail__title">Front-End</h2>
+            <p class="event__detail__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquam quos optio. Adipisci minima officiis repellendus illo, nostrum enim natus sequi dignissimos alias quia dolorum maiores? Quam laborum dolor iusto?</p>          
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+    </div>
+</section>
+<section class="event event--back-end event--image-left">
+    <div class="container" data-aos="fade-left">
+        <div class="event event__detail">
+            <h2 class="event__detail__title">Front-End</h2>
+            <p class="event__detail__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquam quos optio. Adipisci minima officiis repellendus illo, nostrum enim natus sequi dignissimos alias quia dolorum maiores? Quam laborum dolor iusto?</p>          
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+    </div>
+</section>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
