--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC">
             <p class="hero__text">
-                O maior evento de tecnologia do Brasil começa em 10d 12h 13m 45s
+                O maior evento de tecnologia do Brasil começa em <span id="contador"></span>
             </p>
             <div class="infos-bar">
                 <ul class="infos-bar__list">
@@ -31,7 +31,7 @@
                     </li>
                     <li class="infos-bar__list__item">
                         <b>Quando</b>
-                        12/12/2022 às 19hrs
+                        12/12/2025 às 19hrs
                     </li>
                 </ul>
                 <a href="" class="button button--primary">
