--- a/src/index.html
+++ b/src/index.html
@@ -52,28 +52,28 @@
    <section class="event event--ux-ui event--image-left">
     <div class="container" data-aos="fade-left">
         <div class="event event__detail">
-            <h2 class="event__detail__title">Front-End</h2>
+            <h2 class="event__detail__title">Back-End</h2>
             <p class="event__detail__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquam quos optio. Adipisci minima officiis repellendus illo, nostrum enim natus sequi dignissimos alias quia dolorum maiores? Quam laborum dolor iusto?</p>          
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        <img class="event__image" src="./images/backend.png" alt="Back-End">
     </div>
 </section>
 <section class="event event--data-science">
     <div class="container" data-aos="fade-right">
         <div class="event event__detail">
-            <h2 class="event__detail__title">Front-End</h2>
+            <h2 class="event__detail__title">Data Science</h2>
             <p class="event__detail__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquam quos optio. Adipisci minima officiis repellendus illo, nostrum enim natus sequi dignissimos alias quia dolorum maiores? Quam laborum dolor iusto?</p>          
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        <img class="event__image" src="./images/data.png" alt="data science">
     </div>
 </section>
 <section class="event event--back-end event--image-left">
     <div class="container" data-aos="fade-left">
         <div class="event event__detail">
-            <h2 class="event__detail__title">Front-End</h2>
+            <h2 class="event__detail__title">Ux-Ui</h2>
             <p class="event__detail__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aliquam quos optio. Adipisci minima officiis repellendus illo, nostrum enim natus sequi dignissimos alias quia dolorum maiores? Quam laborum dolor iusto?</p>          
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-End">
+        <img class="event__image" src="./images/ui-ux.png" alt="ui-ux">
     </div>
 </section>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
